--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -222,6 +222,7 @@ nav .active {
   max-width: 100%; /* Garante que a imagem não ultrapasse o card */
   height: auto; /* Mantém a proporção da imagem */
   border-radius: 20px;
+  pointer-events: none;
 }
 
 .infos_images {
@@ -343,6 +344,7 @@ nav .active {
   max-width: 100px;
   height: 100px;
   border-radius: 50%;
+  pointer-events: none;
 }
 
 .colab_perfil_content {
@@ -391,6 +393,7 @@ nav .active {
   height: 100px;
   border-radius: 50%;
   margin-right: 20px; /* Espaço entre a imagem e o texto */
+  pointer-events: none;
 }
 
 .depoi_content {
@@ -483,6 +486,7 @@ footer{
   align-items: center;
   justify-content: flex-start;
   flex-direction: column;
+  margin-top: 10px;
 }
 
 .redes_alight img {
@@ -491,3 +495,106 @@ footer{
   margin: 5px;
 }
 
+
+@media screen and (max-width: 426px){
+  .pag_1 {
+    padding: 0;
+  }
+  .Content_pag_1 {
+    padding: 0;
+    margin-top: 70px;
+  }
+  .infos {
+    text-align:left;
+  }
+  .infos h4 {
+    text-align: center;
+  }
+  .pag_2 {
+    padding: 0;
+  }
+  .content_pag2 {
+    padding: 0;
+  }
+  .side_bg {
+    margin: 20px 5px;
+    text-align: left;
+  }
+  .infos_images {
+    margin: 10px 5px;
+  }
+  .infos_images h5 {
+    text-align: center;
+  }
+  .history_bg{
+    padding: 0;
+  }
+  .history_info {
+    padding: 10px;
+  }
+  .history_info p {
+    font-size: 16px;
+    margin: 0;
+  }
+  .history_info img {
+    max-width: 100%;
+    height: auto;
+    margin-top: 10px;
+    border-radius: 20px;
+  }
+  .colab_alight {
+    width: 100%;
+  }
+  .colab_perfil_alight {
+    margin: 0;
+  }
+  .colab_perfil {
+    flex-direction: column;
+    margin: 0;
+    padding: 20px;
+  }
+  .colab_perfil img {
+    margin-right: 0;
+    max-width: 100%;
+    height: 100%;
+    border-radius: 20px;
+  }
+  .colab_perfil_content {
+    margin-right: 0;
+    margin-top: 10px;
+  }
+  .colab_perfil_content h4{
+    text-align: center;
+  }
+  .depoi {
+    display: block;
+    flex-direction: column;
+    max-width: 100%;
+  }
+  .depoi img {
+    margin: 0;
+    max-width: 100%;
+    height: auto;
+    border-radius: 20px;
+  }
+  .depoi_content {
+    max-width: 100%;
+  }
+  .footer_alight {
+    flex-direction: column;
+  }
+  .other_alight {
+    align-items: center;
+  }
+  .contact_alight {
+    align-items: center;
+  }
+  .more_alight {
+    align-items: center;
+  }
+
+  .location_alight {
+    max-width: 100%;
+    text-align: center;
+  }
+}
