--- a/src/css/Global.css
+++ b/src/css/Global.css
@@ -155,7 +155,8 @@ footer{
 .location_alight {
   width: 100%;
   display: flex;
-  align-items: flex-start;
+  align-items: center;
+  justify-content: center;
   border-bottom: 2px solid black;
 }
 
