--- a/src/css/Global.css
+++ b/src/css/Global.css
@@ -63,11 +63,17 @@ blockquote {
   width: 100%;
 }
 
+.name {
+  font-weight: bold;
+  text-decoration:underline;
+}
+
 .user_img {
   width: 40px;
   height: 40px;
   margin-left: 15px;
-  border-radius: 50%;
+  border-radius: 100%;
+  object-fit: cover;
 }
 
 .dropdown-menu{
@@ -178,8 +184,49 @@ footer{
   margin-top: 10px;
 }
 
-.redes img {
-  width: 50px;
-  height: 50px;
-  margin: 5px;
+.redes i {
+  font-size: 35px;
+  color: black;
+  margin: 0 5px;
+}
+
+@media screen and (max-width: 426px){
+  .footer_alight {
+    flex-direction: column;
+  }
+  .other_alight {
+    align-items: center;
+  }
+  .contact_alight {
+    align-items: center;
+  }
+  .more_alight {
+    align-items: center;
+  }
+
+  .location_alight {
+    max-width: 100%;
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 426px) and (max-width: 769px){
+  .footer_alight {
+    flex-direction: column;
+  }
+  .other_alight {
+    align-items: center;
+  }
+  .contact_alight {
+    align-items: center;
+  }
+  .more_alight {
+    align-items: center;
+  }
+
+  .location_alight {
+    max-width: 100%;
+    text-align: center;
+  }
+
 }
