--- a/src/css/Usuario.css
+++ b/src/css/Usuario.css
@@ -1,6 +1,6 @@
 body {
   display: flex;
-  height: 100vh; /* Ocupa toda a altura da tela */
+  height: 100vh;
   margin: 0;
   font-family: Arial, sans-serif;
   background-color: rgba(0, 0, 0, 0.5); /* Cor de fundo escura com opacidade */
